@@ -1,8 +1,11 @@
 $Id$
 
 User-visible changes in version 0.9.2  (2010-  -  ):
+* To compile fityk, Boost (only headers) and xylib must be installed first.
+  Fityk tarball does not contain a copy of boost and xylib now.
 * user-defined functions: split functions can be defined in this way:
   SplitG(h,c,w1,w2) = if x < c then Gaussian(h,c,w1) else Gaussian(h,c,w2)
+* added info-numeric-format option
 * a couple of bug fixes
 
 
